--- a/styles.css
+++ b/styles.css
@@ -107,13 +107,13 @@ h1 {
     color: white;
 }
 
-.overlay-content h1 {
+/*.overlay-content h1 {
     font-size: 20rem;
 }
 
 .overlay-content h6 {
     font-size: 10rem;
-}
+}*/
 
 /* ===== BOTÃO VESTIBULAR ===== */
 .vestibular-btn {
