--- a/styles.css
+++ b/styles.css
@@ -100,13 +100,19 @@ body {
     background-color: #003f87;
 }
 
+
+.segundaparte {
+
+    display: flex;
+    width: 100%;
+    height: 100vh;
+}
+
 .image-side {
     width: 50%;
     flex: 1;
     background-color: #ccc;
-    /* Aqui vai sua imagem */
-    background-size: cover;
-    background-position: center;
+    justify-content: space-between;
 }
 
 .text-side {
@@ -116,7 +122,7 @@ body {
     color: white;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .text-side h2 {
