--- a/styles.css
+++ b/styles.css
@@ -37,24 +37,39 @@ body {
 /* ===== TOP BAR ===== */
 .top-bar {
     display: flex;
+    justify-content: space-between;
     align-items: center;
-    justify-content: center;
-    width: 100%;
-    background: #004080;
-    height: auto;
+    background-color: #2E6B9A;
+    /* Azul do print */
+    padding: 10px 30px;
+    height: 60px;
 }
 
-.top-bar .logo {
-    width: 20%;
-    height: auto;
-}
-
-.top-bar .buttons {
-    width: 15%;
+.logo {
     display: flex;
-    color: white;
-
+    align-items: center;
+    gap: 20px;
 }
+
+.logo img {
+    height: 40px;
+    object-fit: contain;
+}
+
+.buttons {
+    display: flex;
+    gap: 25px;
+    margin-left: auto;
+}
+
+.buttons h6 {
+    color: white;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    margin: 0;
+}
+
 
 /* ===== IMAGEM FULL WIDTH ===== */
 .full-width-image img {
