--- a/styles.css
+++ b/styles.css
@@ -198,11 +198,12 @@ body {
 }
 
 .grid-professores {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-    gap: 10px;
-    justify-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
 }
+
 
 .card {
     width: 100px;
