--- a/styles.css
+++ b/styles.css
@@ -293,6 +293,72 @@ body {
     border-radius: 8px;
 }
 
+/* ===== Big Data no Agronegocio  =====*/
+.bigdata-agronegocio {
+    background-color: #f4f4f4;
+    /* cor de fundo igual da imagem */
+    padding: 50px 30px;
+    text-align: center;
+}
+
+.bigdata-agronegocio h2 {
+    color: #2E6B9A;
+    /* azul escuro */
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 40px;
+}
+
+.cards-container {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+    flex-wrap: wrap;
+    /* para quebrar no celular */
+}
+
+.card {
+    background-color: transparent;
+    /* sem fundo branco! */
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.card p {
+    margin: 10px 0;
+    font-size: 14px;
+    color: #333;
+    font-weight: 600;
+}
+
+.saiba-mais {
+    background-color: #2E6B9A;
+    color: white;
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: bold;
+    text-decoration: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    border-radius: 3px;
+    display: inline-block;
+    transition: background-color 0.3s;
+}
+
+.saiba-mais:hover {
+    background-color: #1c4565;
+}
+
 
 
 /* ===== RODAPÉ ===== */
