--- a/styles.css
+++ b/styles.css
@@ -296,14 +296,12 @@ body {
 /* ===== Big Data no Agronegocio  =====*/
 .bigdata-agronegocio {
     background-color: #f4f4f4;
-    /* cor de fundo igual da imagem */
     padding: 50px 30px;
     text-align: center;
 }
 
 .bigdata-agronegocio h2 {
     color: #2E6B9A;
-    /* azul escuro */
     font-size: 24px;
     font-weight: bold;
     margin-bottom: 40px;
@@ -314,19 +312,17 @@ body {
     justify-content: center;
     gap: 30px;
     flex-wrap: wrap;
-    /* para quebrar no celular */
 }
 
-.card {
+.agronegocio-card {
     background-color: transparent;
-    /* sem fundo branco! */
     width: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.card img {
+.agronegocio-card img {
     width: 100%;
     height: 250px;
     object-fit: cover;
@@ -334,7 +330,7 @@ body {
     border-radius: 4px;
 }
 
-.card p {
+.agronegocio-card p {
     margin: 10px 0;
     font-size: 14px;
     color: #333;
@@ -358,8 +354,6 @@ body {
 .saiba-mais:hover {
     background-color: #1c4565;
 }
-
-
 
 /* ===== RODAPÉ ===== */
 footer {
