--- a/styles.css
+++ b/styles.css
@@ -200,7 +200,7 @@ body {
 .grid-professores {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
     gap: 20px;
 }
 
