--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   /* Firefox */
   -ms-overflow-style: none;
   /* IE e Edge */
+  max-width: 100vw;
 }
 
 body::-webkit-scrollbar {
@@ -74,6 +75,7 @@ body {
   width: 100%;
   position: relative;
   overflow: hidden;
+  max-width: 100vw;
 }
 
 .image-text-container {
