--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,13 @@ body::-webkit-scrollbar {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  max-width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
   overflow-x: hidden;
 }
 
@@ -113,17 +119,6 @@ body {
   margin: 0 0 20px 0;
 }
 
-.vestibular-btn {
-  background-color: #2e6b9a;
-  color: white;
-  font-weight: bold;
-  padding: 10px 20px;
-  border: none;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
 .segundaparte {
   display: flex;
   width: 100%;
@@ -167,18 +162,6 @@ body {
 .text-side p {
   margin-bottom: 20px;
   line-height: 1.6;
-}
-
-.vestibular-btn {
-  background-color: white;
-  color: #2e6b9a;
-  font-weight: bold;
-  padding: 10px 20px;
-  font-size: 16px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-  align-self: start;
 }
 
 /* ===== PROFESSORES ===== */
