--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,12 @@ body {
   gap: 25px;
   margin-left: auto;
 }
+.buttons a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+}
+
 .buttons h6 {
   color: white;
   font-size: 14px;
@@ -188,6 +194,25 @@ body {
   line-height: 1.5;
   font-size: 1rem;
 }
+
+.buttontopo {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #2e6b9a;
+  color: white;
+  border: 2px solid #2e6b9a;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 4px;
+  text-transform: uppercase;
+  transition: 0.3s;
+}
+.buttontopo:hover {
+  background-color: #ffc107;
+  border-color: #ffc107;
+  color: #305682;
+}
+
 .button {
   display: inline-block;
   padding: 10px 20px;
