--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,26 @@ body {
   cursor: pointer;
   margin: 0;
 }
+
+/* ==== IMAGEM GRANDE TURMA ==== */
+.buttontopo {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #2e6b9a;
+  color: white;
+  border: 2px solid #2e6b9a;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 4px;
+  text-transform: uppercase;
+  transition: 0.3s;
+}
+.buttontopo:hover {
+  background-color: #ffc107;
+  border-color: #ffc107;
+  color: #305682;
+}
+
 .full-width-image {
   width: 100%;
   position: relative;
@@ -164,6 +184,76 @@ body {
   font-size: 0.8rem;
   padding: 4px 0;
 }
+
+/* ==== CAROUSSEL ==== */
+.professores-carousel {
+  padding: 2rem;
+  text-align: center;
+  background-color: #f9f9f9;
+}
+.professores-carousel h2 {
+  color: #2e6b9a;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+.professores-carousel p {
+  color: #2e6b9a;
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
+}
+.carousel-container {
+  position: relative;
+  overflow: hidden;
+  max-width: 90%;
+  margin: auto;
+}
+.carousel-track {
+  display: flex;
+  justify-content: center; /* Isso centraliza os cards */
+  transition: transform 0.5s ease-in-out;
+  gap: 20px;
+}
+.carousel-card {
+  min-width: 120px;
+  max-width: 120px;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  flex-shrink: 0;
+  text-align: center;
+}
+.carousel-card img {
+  width: 100%;
+  height: 140px;
+  object-fit: cover;
+  background-color: #cceeff;
+}
+.carousel-card .nome {
+  background-color: #2e6b9a;
+  color: white;
+  font-size: 0.8rem;
+  padding: 6px 0;
+}
+.carousel-button {
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 51, 102, 0.7);
+  color: white;
+  border: none;
+  padding: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  z-index: 2;
+}
+.carousel-button.prev {
+  left: 0;
+}
+.carousel-button.next {
+  right: 0;
+}
+
 /* ===== Mercado de trabalho =====*/
 .mercado-trabalho {
   display: flex;
@@ -193,24 +283,6 @@ body {
   margin-bottom: 20px;
   line-height: 1.5;
   font-size: 1rem;
-}
-
-.buttontopo {
-  display: inline-block;
-  padding: 10px 20px;
-  background-color: #2e6b9a;
-  color: white;
-  border: 2px solid #2e6b9a;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 4px;
-  text-transform: uppercase;
-  transition: 0.3s;
-}
-.buttontopo:hover {
-  background-color: #ffc107;
-  border-color: #ffc107;
-  color: #305682;
 }
 
 .button {
@@ -289,6 +361,7 @@ body {
 .saiba-mais:hover {
   background-color: #1c4565;
 }
+
 /* ===== BOLINHA =====*/
 section.bolinha {
   width: 100%;
@@ -395,6 +468,50 @@ section.bolinha .s5 {
   left: 50%;
   transform: translateX(-50%);
 }
+
+/* ==== Agro section ==== */
+.agro-section {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 50px;
+  background-color: #1a1a1a;
+  color: #fff;
+}
+
+.agro-content {
+  max-width: 500px;
+}
+
+.agro-content h1 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  line-height: 1.2;
+}
+
+.agro-content p {
+  font-size: 1rem;
+  margin-bottom: 20px;
+  line-height: 1.5;
+}
+
+.agro-content ul {
+  list-style: none;
+  padding: 0;
+}
+
+.agro-content ul li {
+  margin-bottom: 10px;
+}
+
+.agro-image img {
+  max-width: 500px;
+  width: 100%;
+  height: auto;
+  border-radius: 10px;
+}
+
 /* ===== RODAPÉ ===== */
 .novo-rodape {
   background-color: #2e6b9a;
@@ -421,73 +538,21 @@ section.bolinha .s5 {
 .novo-rodape .footer-links a:hover {
   text-decoration: underline;
 }
-.professores-carousel {
-  padding: 2rem;
-  text-align: center;
-  background-color: #f9f9f9;
+
+/* ===== RESPONSIVO ===== */
+
+/* Responsividade */
+@media (max-width: 768px) {
+  .agro-section {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .agro-content {
+    margin-bottom: 30px;
+  }
 }
-.professores-carousel h2 {
-  color: #2e6b9a;
-  font-size: 1.5rem;
-  margin-bottom: 0.5rem;
-}
-.professores-carousel p {
-  color: #2e6b9a;
-  margin-bottom: 1.5rem;
-  font-size: 1rem;
-}
-.carousel-container {
-  position: relative;
-  overflow: hidden;
-  max-width: 90%;
-  margin: auto;
-}
-.carousel-track {
-  display: flex;
-  justify-content: center; /* Isso centraliza os cards */
-  transition: transform 0.5s ease-in-out;
-  gap: 20px;
-}
-.carousel-card {
-  min-width: 120px;
-  max-width: 120px;
-  background-color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-  overflow: hidden;
-  flex-shrink: 0;
-  text-align: center;
-}
-.carousel-card img {
-  width: 100%;
-  height: 140px;
-  object-fit: cover;
-  background-color: #cceeff;
-}
-.carousel-card .nome {
-  background-color: #2e6b9a;
-  color: white;
-  font-size: 0.8rem;
-  padding: 6px 0;
-}
-.carousel-button {
-  position: absolute;
-  top: 40%;
-  transform: translateY(-50%);
-  background-color: rgba(0, 51, 102, 0.7);
-  color: white;
-  border: none;
-  padding: 10px;
-  font-size: 20px;
-  cursor: pointer;
-  z-index: 2;
-}
-.carousel-button.prev {
-  left: 0;
-}
-.carousel-button.next {
-  right: 0;
-}
+
 @media (max-width: 600px) {
   .carousel-card {
     min-width: 100px;
@@ -497,7 +562,7 @@ section.bolinha .s5 {
     padding: 8px;
   }
 }
-/* ===== RESPONSIVO ===== */
+
 @media (max-width: 48rem) {
   .top-bar {
     flex-direction: column;
